--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Auth Boilerplate</title>
-</head>
-<body>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+  </head>
+  <body>
     <%- include partials/header.ejs %>
-        <main>
-            <%- body %> 
-        </main>
-</body>
+
+    <main>
+      <div class="error"><%- include partials/alerts %></div>
+      <%- body %>
+    </main>
+    <div class="footer">
+      <%- include partials/footer.ejs %>
+    </div>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
+  </body>
 </html>
