--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,6 +7,41 @@
     <title>SIGNUP</title>
 </head>
 <body>
-    <h1>SIGNUP</h1>
+        <div id="login-background">
+                <h1>SIGNUP</h1>
+                <div class="login-form">
+                <form method="POST" action="/auth/signup">
+                    <label for="username-field">Username:</label>
+                    <input id="username-field" type="text" name="username">
+            
+                    <label for="email-field">Email:</label>
+                    <input id="email-field" type="text" name="email">
+
+                    <label for="password-field">Password:</label>
+                    <input id="password-field" type="password" name="password">
+
+                    <label for="passwordVerify-field">Password Verify:</label>
+                    <input id="passwordVerify-field" type="password" name="passwordVerify">
+
+                    <label for="firstName-field">First Name:</label>
+                    <input id="email-field" type="text" name="firstname">
+
+                    <label for="lastName-field">Last Name:</label>
+                    <input id="email-field" type="text" name="lastname">
+
+                    <label for="birthday-field">Birthday:</label>
+                    <input id="birthday-field" type="text" name="birthday">
+
+                    <label for="profile-field">Profile Pic:</label>
+                    <input id="profile-field" type="url" name="profile">
+
+                   
+                    <label for="bio-field">Bio:</label>
+                    <textarea id="bio-field" type="text" name="bio"></textarea>
+            
+                    <input id="submit-login" type="submit">
+                </form>
+            </div>
+            </div>
 </body>
 </html>
