--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,11 @@
     <title>HOME</title>
 </head>
 <body>
-    <h1>Hello World! This is the homepage</h1>
+    <h1>Welcome to the homepage!</h1>
+    <p>Use the links above to access information.
+        You can view your profile, and see a list of
+        items to add to favorites. I am using the Best Buy 
+        API. Have fun!
+    </p>
 </body>
 </html>
