--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,19 +10,17 @@
    
     <ul>
         <% if(user) { %>
+            <li><a href="/items">Best Buy Products</a></li>
+            <li><a href="/myItems">My Items</a></li>
+            <li><a href="/wishList">My WishList</a></li>
             <li><a href="/profile">Profile Page</a></li>
-            <li><a href="/items">Items List</a></li>
-            <% if(user.admin) { %>
-                <li><a href="/profile/admin">Admin Profile</a></li>
-           <% } %>
-            <li><a href="/auth/logout">Logout</a></li>
-       <% } else { %>
-        <li><a href="/auth/signup">Signup</a></li>
-        <li><a href="/auth/login">Login</a></li>
-      <% } %>
-      
-      
-       
+                <% if(user.admin) { %>
+                    <li><a href="/profile/admin">Admin Profile</a></li>
+                <% } %>
+                    <li><a href="/auth/logout">Logout</a></li>
+                <% } else { %>
+                    <li><a href="/auth/signup">Signup</a></li>
+                    <li><a href="/auth/login">Login</a></li>
+                <% } %>
     </ul>
-
 </nav>
