--- a/views/lists/computers.ejs
+++ b/views/lists/computers.ejs
@@ -17,14 +17,14 @@
             <input type="hidden" name="sku" value="<%= e.sku %>">
             <input type="hidden" name="name" value="<%= e.name %>">
             <input type="hidden" name="price" value="<%= e.salePrice %>">
-            <input type="submit" value="LIKE">
+            <input type="submit" value="MY ITEMS">
         </form> 
 
         <form action="/wishList" method="POST">
             <input type="hidden" name="sku" value="<%= e.sku %>">
             <input type="hidden" name="name" value="<%= e.name %>">
             <input type="hidden" name="price" value="<%= e.salePrice %>">
-            <input type="submit" value="LIKE">
+            <input type="submit" value="ADD TO WISHLIST">
         </form> 
     </div>
     <hr>
