update and delete complete

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,3 +1,71 @@
 <h1>Click on one of these lists!</h1>
 
-<a href="/computers">DESKTOP COMPUTERS</a>
+<div class="bestBuyList">
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img
+            src="https://cdn.thewirecutter.com/wp-content/uploads/2018/12/all-in-one-pc-lowres-3075.jpg"
+          />
+        </div>
+        <div class="card-content">
+          <p>
+            I am a very simple card. I am good at containing small bits of
+            information. I am convenient because I require little markup to use
+            effectively.
+          </p>
+        </div>
+        <div class="card-action">
+          <a href="/computers">DESKTOP COMPUTERS</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr />
+
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80"
+          />
+        </div>
+        <div class="card-content">
+          <p>
+            I am a very simple card. I am good at containing small bits of
+            information. I am convenient because I require little markup to use
+            effectively.
+          </p>
+        </div>
+        <div class="card-action">
+          <a href="/laptops">LAPTOPS</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col s12 m7">
+      <div class="card">
+        <div class="card-image">
+          <img
+            src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE2F4aN?ver=e796"
+          />
+        </div>
+        <div class="card-content">
+          <p>
+            I am a very simple card. I am good at containing small bits of
+            information. I am convenient because I require little markup to use
+            effectively.
+          </p>
+        </div>
+        <div class="card-action">
+          <a href="/headphones">HEADPHONES</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
