--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,9 @@ html, body {
     margin: 0;
     padding: 0;
 }
+h1 {
+    font-size: 24px;
+}
 nav {
    background-image: linear-gradient(rgb(0, 195, 255), rgb(0, 255, 221));
    display: flex;
@@ -79,6 +82,9 @@ background-color: rgb(143, 198, 143);
 .prod-right {
     padding: 20px;
     margin: 20px;
+}
+.bestBuyList {
+    display: flex;
 }
 footer {
     background-color: rgb(0, 195, 255);
