--- a/views/items.ejs
+++ b/views/items.ejs
@@ -2,10 +2,10 @@
 
 <div class="bestBuyList">
   <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
+    <div class="col s12 m10" >
+      <div class="card z-depth-5">
         <div class="card-image">
-          <img
+          <img class="responsive-img z-depth-2"
             src="https://cdn.thewirecutter.com/wp-content/uploads/2018/12/all-in-one-pc-lowres-3075.jpg"
           />
         </div>
@@ -26,10 +26,10 @@
   <hr />
 
   <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
+    <div class="col s12 m10">
+      <div class="card z-depth-5">
         <div class="card-image">
-          <img
+          <img class="responsive-img z-depth-2"
             src="https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80"
           />
         </div>
@@ -48,10 +48,10 @@
   </div>
 
   <div class="row">
-    <div class="col s12 m7">
-      <div class="card">
+    <div class="col s12 m10">
+      <div class="card z-depth-5">
         <div class="card-image">
-          <img
+          <img class="responsive-img z-depth-2"
             src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE2F4aN?ver=e796"
           />
         </div>
