--- a/views/items.ejs
+++ b/views/items.ejs
@@ -1,8 +1,9 @@
-<h1>Click on one of these lists!</h1>
+
 
 <div class="bestBuyList">
+  <h1>Check out these products!</h1>
   <div class="row">
-    <div class="col s12 m10" >
+    <div class="col s4 m4" >
       <div class="card z-depth-5">
         <div class="card-image">
           <img class="responsive-img z-depth-2"
@@ -21,12 +22,8 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <hr />
-
-  <div class="row">
-    <div class="col s12 m10">
+    <div class="col s4 m4">
       <div class="card z-depth-5">
         <div class="card-image">
           <img class="responsive-img z-depth-2"
@@ -45,10 +42,8 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col s12 m10">
+ 
+    <div class="col s4 m4">
       <div class="card z-depth-5">
         <div class="card-image">
           <img class="responsive-img z-depth-2"
