--- a/static/styles.css
+++ b/static/styles.css
@@ -5,11 +5,14 @@ html, body {
 h1 {
     font-size: 24px;
 }
+h2 {
+    font-size: 20px;
+}
 nav {
    background-image: linear-gradient(rgb(0, 195, 255), rgb(0, 255, 221));
    display: flex;
    justify-content: space-between;
-   height: 50px;
+   height: 65px;
 }
 nav ul {
     margin: 0;
@@ -71,6 +74,13 @@ background-color: rgb(143, 198, 143);
     float: right;
     cursor: pointer;
 }
+.profile-page {
+    display: flex;
+    justify-content: space-evenly;
+}
+.bestBuyList {
+    text-align: center;
+}
 .products {
     display: flex;
     justify-content: space-between;
@@ -83,10 +93,7 @@ background-color: rgb(143, 198, 143);
     padding: 20px;
     margin: 20px;
 }
-.bestBuyList {
-    display: flex;
-    justify-content: center;
-}
+
 footer {
     background-color: rgb(0, 195, 255);
     position: fixed;
