changed headphones to tvs

--- a/views/items.ejs
+++ b/views/items.ejs
@@ -47,7 +47,7 @@
       <div class="card z-depth-5">
         <div class="card-image">
           <img class="responsive-img z-depth-2"
-            src="https://img-prod-cms-rt-microsoft-com.akamaized.net/cms/api/am/imageFileData/RE2F4aN?ver=e796"
+            src="https://i1.wp.com/shairoom.com/wp-content/uploads/2019/04/Modern-living-room-with-electric-fireplace-enclosed-under-TV-wall-Image-35.jpg?resize=570%2C381&ssl=1"
           />
         </div>
         <div class="card-content">
@@ -58,7 +58,7 @@
           </p>
         </div>
         <div class="card-action">
-          <a href="/headphones">HEADPHONES</a>
+          <a href="/tvs">TVs</a>
         </div>
       </div>
     </div>
