--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,9 @@
     <title>404</title>
 </head>
 <body>
-    <h1>404</h1>
-    <h2>The way is shut. It was made by those who are DEAD</h2>
+  
+        <h1>404</h1>
+        <h2>The way is shut. It was made by those who are DEAD</h2>
+        <div class="fourOFour"></div>
 </body>
 </html>
