--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,11 +7,13 @@
     <title>HOME</title>
 </head>
 <body>
+    <div class="home-back">
         <h1>Welcome to the homepage!</h1>
         <p>Use the links above to access information.
             You can view your profile, and see a list of
             items to add to favorites. I am using the Best Buy 
             API. Have fun!
         </p>
+    </div>
 </body>
 </html>
