--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="home-back">
-        <h1>Welcome to the homepage!</h1>
+        <h1>Welcome to Jonny's Application!</h1>
         <p>Use the links above to access information.
             You can view your profile, and see a list of
             items to add to favorites. I am using the Best Buy 
