--- a/views/partials/productRender.ejs
+++ b/views/partials/productRender.ejs
@@ -1,29 +1,31 @@
 <% elements.forEach(e => { %>
-    <div class="products">
-        <div class="prod-left">
-            <h2 class="product-class"><%= e.class %></h2>
-            <img src="<%= e.image %>" alt="item-image">
-        </div>
-        <div class="prod-right">
-            <h1 class="product-name"><%= e.name %></h1>
-            <h2><%= e.salePrice %></h2>
-            <p class="product-description"><%= e.shortDescription %></p>
-        </div>    
-    </div>
+<div class="products">
+  <div class="prod-left">
+    <img src="<%= e.image %>" alt="item-image" />
+  </div>
+  <div class="prod-right">
+    <h1 class="product-name"><%= e.name %></h1>
+    <h2><%= e.salePrice %></h2>
+    <p class="product-description"><%= e.shortDescription %></p>
     <div class="item-interact">
-        <form action="/myItems" method="POST">
-            <input type="hidden" name="sku" value="<%= e.sku %>">
-            <input type="hidden" name="name" value="<%= e.name %>">
-            <input type="hidden" name="price" value="<%= e.salePrice %>">
-            <input type="submit" value="ADD TO MY ITEMS">
-        </form> 
+      <form action="/myItems" method="POST">
+        <input type="hidden" name="sku" value="<%= e.sku %>" />
+        <input type="hidden" name="name" value="<%= e.name %>" />
+        <input type="hidden" name="price" value="<%= e.salePrice %>" />
+        <label for="comment">If you'd like to leave a short description of this item, comment below (Limit 255 characters)</label>
+        <input id="comment" type="text" name="comment">
+        <input type="submit" value="ADD TO MY ITEMS" />
+      </form>
 
-        <form action="/wishList" method="POST">
-            <input type="hidden" name="sku" value="<%= e.sku %>">
-            <input type="hidden" name="name" value="<%= e.name %>">
-            <input type="hidden" name="price" value="<%= e.salePrice %>">
-            <input type="submit" value="ADD TO WISHLIST">
-        </form> 
+      <form action="/wishList" method="POST">
+        <input type="hidden" name="sku" value="<%= e.sku %>" />
+        <input type="hidden" name="name" value="<%= e.name %>" />
+        <input type="hidden" name="price" value="<%= e.salePrice %>" />
+        <input type="submit" value="ADD TO WISHLIST" />
+      </form>
     </div>
-    <hr>
+  </div>
+</div>
+
+<hr />
 <% }) %>
