--- a/views/items.ejs
+++ b/views/items.ejs
@@ -11,9 +11,7 @@
         </div>
         <div class="card-content">
           <p>
-            I am a very simple card. I am good at containing small bits of
-            information. I am convenient because I require little markup to use
-            effectively.
+            Checkout the latest popular desktops! Click the link below for details.
           </p>
         </div>
         <div class="card-action">
@@ -31,9 +29,7 @@
         </div>
         <div class="card-content">
           <p>
-            I am a very simple card. I am good at containing small bits of
-            information. I am convenient because I require little markup to use
-            effectively.
+              Checkout the latest popular laptops! Click the link below for details.
           </p>
         </div>
         <div class="card-action">
@@ -51,9 +47,7 @@
         </div>
         <div class="card-content">
           <p>
-            I am a very simple card. I am good at containing small bits of
-            information. I am convenient because I require little markup to use
-            effectively.
+              Checkout the latest popular tvs! Click the link below for details.
           </p>
         </div>
         <div class="card-action">
