--- a/static/styles.css
+++ b/static/styles.css
@@ -97,7 +97,7 @@ img {
     background-image: url('https://i.pinimg.com/736x/10/1e/f6/101ef6a9e146b23de28fa2cd568ad17b.jpg');
     background-size: cover;
     height: 100%;
-    padding: 40px;
+    padding: 40px 80px;
 }
 .bestBuyList {
     padding: 40px 0px;
