--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="home-back">
-        <h1>Welcome to Jonny's Application!</h1>
-        <p>Use the links above to access information.
-            You can view your profile, and see a list of
-            items to add to favorites. I am using the Best Buy 
-            API. Have fun!
-        </p>
+        <h1>Using this site</h1>
+        <h2>This app features information from the Best Buy API. 
+            <br>
+            You may select products that appear in the items list and
+            <br>
+            save them to your favorites or your wish list. Use the links
+            <br>
+            above to navigate the site. 
+        </h2>
     </div>
 </body>
 </html>
