fixed issue with calling all items regardless of user

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -20,11 +20,7 @@
           <input id="password-field" type="password" name="password" />
 
           <label for="passwordVerify-field">Password Verify:</label>
-          <input
-            id="passwordVerify-field"
-            type="password"
-            name="passwordVerify"
-          />
+          <input id="passwordVerify-field" type="password" name="passwordVerify"/>
 
           <label for="firstName-field">First Name:</label>
           <input id="email-field" type="text" name="firstname" />
