--- a/static/styles.css
+++ b/static/styles.css
@@ -6,7 +6,7 @@ html, body {
     background-image: url('https://i.imgur.com/SvnuN4M.png');
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100vh;
     text-align: center;
 }
 h1 {
@@ -24,10 +24,8 @@ nav {
 nav ul {
     margin: 0;
     padding-left: 0px;
-    display: inline;
 }
 nav ul li {
-    display: inline;
     padding: 0px 5px;
 }
 nav a{
@@ -96,7 +94,7 @@ img {
 .profile-page {
     background-image: url('https://i.pinimg.com/736x/10/1e/f6/101ef6a9e146b23de28fa2cd568ad17b.jpg');
     background-size: cover;
-    height: 100%;
+    height: 100vh;
     padding: 40px 80px;
 }
 .bestBuyList {
@@ -104,7 +102,7 @@ img {
     text-align: center;
     background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/69/01/7957b416b366534.jpg');
     background-size: cover;
-    height: 100%;
+    height: 100vh;
 }
 .products {
     display: flex;
@@ -126,5 +124,6 @@ footer {
     bottom: 0px;
     padding: 10px;
     width: 100%;
+    text-align: right;
 }
 
