--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,9 +14,9 @@
       <div class="error"><%- include partials/alerts %></div>
       <%- body %>
     </main>
-    <div class="footer">
+    <!-- <div class="footer">
       <%- include partials/footer.ejs %>
-    </div>
+    </div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
