whoohoo, now can see users per item

--- a/static/styles.css
+++ b/static/styles.css
@@ -40,6 +40,7 @@ main {
 img {
     max-height: 40vh;
     max-width: 30vw;
+    min-width: 15vw;
 }
 .error {
     margin: 5px;
@@ -117,6 +118,17 @@ img {
 .prod-right {
     padding: 20px;
     margin: 20px;
+}
+.my-p {
+    display: flex;
+    justify-content:space-between;
+    padding: 20px 40px;
+}
+.my-p-left {
+    padding: 0px 40px;
+}
+.my-p-right {
+    padding: 0px 40px;
 }
 footer {
     background-color: rgb(0, 195, 255);
