--- a/views/profile/wishList.ejs
+++ b/views/profile/wishList.ejs
@@ -1,4 +1,4 @@
-<h1>This is what I wish for X-MAS</h1>
+<h1>This is what I wish for!</h1>
 
 <% items.forEach(wItem => { %>
     <h2><%= wItem.name %></h2>
