--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,13 +9,13 @@
 <body>
     <div class="home-back">
         <h1>Using this site</h1>
-        <h2>This app features information from the Best Buy API. 
+        <h2>This site features information from the Best Buy API. 
             <br>
             You may select products that appear in the items list and
             <br>
             save them to your favorites or your wish list. Use the links
             <br>
-            above to navigate the site. 
+            above to navigate around. 
         </h2>
     </div>
 </body>
