--- a/views/partials/productRender.ejs
+++ b/views/partials/productRender.ejs
@@ -12,7 +12,7 @@
         <input type="hidden" name="sku" value="<%= e.sku %>" />
         <input type="hidden" name="name" value="<%= e.name %>" />
         <input type="hidden" name="price" value="<%= e.salePrice %>" />
-        <label for="comment">If you'd like to leave a short description of this item, comment below (Limit 255 characters)</label>
+        <label for="comment">If you own this item and would like to leave a comment, insert below (Limit 255 characters)</label>
         <input id="comment" type="text" name="comment">
         <input type="submit" value="ADD TO MY ITEMS" />
       </form>
@@ -22,6 +22,11 @@
         <input type="hidden" name="name" value="<%= e.name %>" />
         <input type="hidden" name="price" value="<%= e.salePrice %>" />
         <input type="submit" value="ADD TO WISHLIST" />
+      </form>
+
+      <form action="computers/view" method="POST">
+        <input type="hidden" value="<%= e.sku %>" name="sku">
+        <input type="submit" value="See who owns this product!">
       </form>
     </div>
   </div>
