--- a/views/singleItem.ejs
+++ b/views/singleItem.ejs
@@ -1,5 +1,16 @@
-<h1>Oh hi mark</h1>
 
 <% users.forEach(user => { %>
-   <p><%= user.firstname %></p>
+    <div class="row">
+        <div class="col s4 m4">
+          <div class="card">
+            <div class="card-image">
+                <img src="<%= user.profile %>" alt="profile-img">
+            </div>
+            <div class="card-content">
+                <h2><%= user.firstname %></h2>
+            </div>
+          </div>
+        </div>
+      </div>
 <% }) %>
+
