more styling, added beTheFirst ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,9 +13,11 @@
             <br>
             You may select products that appear in the items list and
             <br>
-            save them to your favorites or your wish list. Use the links
+            save them to your favorites or your wish list. Also check out 
             <br>
-            above to navigate around. 
+            what's popular by seeing what others have purchased!
+            <br>
+            Use the nav bar to find your way around the site. 
         </h2>
     </div>
 </body>
