--- a/static/styles.css
+++ b/static/styles.css
@@ -75,6 +75,7 @@ img {
 .login-form label{
     padding: 5px 0px;
     font-size: 14px;
+    color: black;
 }
 .login-form input{
     padding: 0px 0px;
@@ -82,6 +83,10 @@ img {
 }
 .login-form #submit-login{
     background-color: rgb(209, 208, 208);
+}
+.update-form label {
+    color: black;
+    font-size: 14px;
 }
 .error-box {
     background-color: rgb(205, 138, 138);
