--- a/views/profile/index.ejs
+++ b/views/profile/index.ejs
@@ -18,7 +18,7 @@
   </div>
 
   <div class="profile-right col s6">
-    <div>
+    <div class="update-form">
         <form action="/profile/<%= user.dataValues.id %>/?_method=PUT" method="POST">
             <h1>Update profile info!</h1>
             <label for="update-username">Username</label>
